--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "homepage": "https://patternfly-react-seed.surge.sh",
   "license": "MIT",
   "private": true,
+  "main": "electron.js",
   "scripts": {
     "prebuild": "npm run clean",
     "dr:surge": "node dr-surge.js",
@@ -24,6 +25,8 @@
     "clean": "rimraf dist",
     "storybook": "start-storybook -p 6006",
     "build:storybook": "build-storybook",
+    "electron-dev": "concurrently \"BROWSER=none npm start\" \"wait-on http://localhost:8080 && electron .\"",
+    "olga": "webpack --config webpack.prod.js && npm run electron-dev", 
     "mock-server": "node mock-server/server.js"
   },
   "devDependencies": {
@@ -35,9 +38,9 @@
     "@storybook/react": "^6.2.9",
     "@types/enzyme": "^3.10.8",
     "@types/jest": "^26.0.23",
+    "@types/node": "^14.17.5",
     "@types/react-router-dom": "^5.1.7",
     "@types/victory": "^33.1.4",
-    "@types/node": "^14.17.5",
     "@typescript-eslint/eslint-plugin": "^4.26.1",
     "@typescript-eslint/parser": "^4.26.1",
     "@wojtekmaj/enzyme-adapter-react-17": "^0.6.1",
@@ -45,6 +48,8 @@
     "css-loader": "^5.2.6",
     "css-minimizer-webpack-plugin": "^3.0.1",
     "dotenv-webpack": "^7.0.3",
+    "electron-builder": "^22.11.7",
+    "electron-is-dev": "^2.0.0",
     "enzyme": "^3.11.0",
     "enzyme-adapter-react-16": "^1.15.6",
     "enzyme-to-json": "^3.6.2",
@@ -55,6 +60,9 @@
     "html-webpack-plugin": "^5.3.1",
     "imagemin": "^8.0.0",
     "jest": "^27.0.4",
+    "js-cookie": "^2.2.1",
+    "json-server": "^0.16.0",
+    "jsonwebtoken": "^8.5.1",
     "mini-css-extract-plugin": "^1.6.0",
     "postcss": "^8.3.1",
     "prettier": "^2.3.1",
@@ -78,16 +86,15 @@
     "webpack-bundle-analyzer": "^4.4.2",
     "webpack-cli": "^4.7.2",
     "webpack-dev-server": "^3.11.2",
-    "webpack-merge": "^5.8.0",
-    "json-server": "^0.16.0",
-    "jsonwebtoken": "^8.5.1",
-    "js-cookie": "^2.2.1"
+    "webpack-merge": "^5.8.0"
   },
   "dependencies": {
     "@patternfly/react-core": "^4.128.2",
     "@patternfly/react-icons": "^4.10.11",
     "@patternfly/react-styles": "^4.10.11",
     "@storybook/builder-webpack5": "^6.2.9",
+    "concurrently": "^6.2.1",
+    "electron": "^13.2.2",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-router-last-location": "^2.0.1",
